--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!--
+﻿<!--
 Author: W3layouts
 Author URL: http://w3layouts.com
 -->
@@ -216,7 +216,7 @@ Author URL: http://w3layouts.com
             <div class="col-lg-4 col-md-6 grids-feature">
                 <div class="area-box">
                     <img src="assets/images/donate.png" alt="">
-                    <h4><a href="#feature" class="title-head">Give Donation.</a></h4>
+                    <h4><a href="#feature" class="title-head">Give Kasspar Donation.</a></h4>
                     <p class="mb-3">Vivamus a ligula quam. Ut blandit eu leo non. Duis sed dolor amet ipsum primis in faucibus orci dolor sit et amet.</p>
                     <a href="#donate" class="btn btn-text">Donate Now </a>
                 </div>
